clusters/home/resources/feed-reader.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: feed-reader
  namespace: feed-reader
  labels:
    app: feed-reader
spec:
  replicas: 1
  selector:
    matchLabels:
      app: feed-reader
  template:
    metadata:
      labels:
        app: feed-reader
    spec:
      containers:
        - name: feed-reader
          image: ghcr.io/nakatanakatana/feed-reader:0.20.2@sha256:cbd6417219756b66a9b65a739b033811886c485ea8ede9d3fe8e6c3ae276d8ac
          imagePullPolicy: Always
          volumeMounts:
            - name: data
              mountPath: /data
          ports:
            - containerPort: 8080
        - name: litestream
          image: litestream/litestream:0.5.12@sha256:dfbb4d91b3d6f50f3185f29f5abb25118d00053de3fc6a45f4a399bc859f4e0f
          args:
            - replicate
          volumeMounts:
            - name: data
              mountPath: /data
            - name: litestream-config
              mountPath: /etc/litestream.yml
              subPath: litestream.yml
      volumes:
        - name: data
          emptyDir: {}
        - name: litestream-config
          configMap:
            name: litestream
---
apiVersion: v1
kind: Service
metadata:
  name: feed-reader
  namespace: feed-reader
spec:
  type: ClusterIP
  selector:
    app: feed-reader
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: feed-reader
  namespace: feed-reader
spec:
  ingressClassName: cloudflare-tunnel
  rules:
  - host: feed.nakatanakatana.app
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: feed-reader
            port:
              number: 8080
