clusters/home/resources/nostr-nip05.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nostr-nip05
  namespace: default
spec:
  selector:
    matchLabels:
      run: nostr-nip05
  replicas: 2
  template:
    metadata:
      labels:
        run: nostr-nip05
    spec:
      containers:
      - name: nostr-nip05
        image: ghcr.io/nakatanakatana/nostr-tools:0.0.3@sha256:ed449a4fa95211148b24e5a4b50a87829499a2ae2218df43969a029e4bc005a7
        command: ["/app/nip05"]
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: nostr-nip05
  namespace: default
  labels:
    run: nostr-nip05
spec:
  ports:
  - port: 8080
    protocol: TCP
  selector:
    run: nostr-nip05
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cf-ingress-nostr-nip05
  namespace: default
spec:
  ingressClassName: cloudflare-tunnel
  rules:
  - host: nakatanakatana.app
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nostr-nip05
            port:
              number: 8080
