clusters/home/resources/obsidian-clippings-feed.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: obsidian-clippings-feed
  namespace: default
  labels:
    app: obsidian-clippings-feed
spec:
  replicas: 1
  selector:
    matchLabels:
      app: obsidian-clippings-feed
  template:
    metadata:
      labels:
        app: obsidian-clippings-feed
    spec:
      containers:
        - name: obsidian-clippings-feed
          image: ghcr.io/nakatanakatana/obsidian-clippings-feed:latest@sha256:f7903a9417bd68cc7e618376b20705faecee7e2510b9fbfcc7b71989da02f93e
          imagePullPolicy: Always
          volumeMounts:
            - name: data
              mountPath: /app/data
          ports:
            - containerPort: 8080
      volumes:
        - name: data
          emptyDir: {}
        - name: livesync-config
          secret:
            secretName: obsidian-secret
---
apiVersion: v1
kind: Service
metadata:
  name: obsidian-clippings-feed
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: obsidian-clippings-feed
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: obsidian-clippings-feed
  namespace: default
spec:
  ingressClassName: cloudflare-tunnel
  rules:
  - host: clippings.nakatanakatana.app
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: obsidian-clippings-feed
            port:
              number: 8080
